clusters/homelab/apps/gridfinity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gridfinity
  namespace: gridfinity
  labels:
    traefik.tafu.casa/instance: public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-fail2ban-public@kubernetescrd
spec:
  ingressClassName: traefik-public
  rules:
    - host: gridfinity.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gridfinity
                port:
                  number: 80
  tls:
    - hosts:
        - gridfinity.tafu.casa
      secretName: gridfinity-tls
